make nav par responsive
still under maintenance

--- a/index.html
+++ b/index.html
@@ -12,170 +12,8 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="Fonts/styles.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Menu</title>
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;400&display=swap");
-      nav {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 1em 5vw;
-        background-color: #fff;
-        z-index: 10;
-        position: sticky;
-        top: 0;
-        transition: 0.3s;
-        font-family: "Nunito", sans-serif;
-      }
-      .scrolled {
-        box-shadow: 0px 3px 19px -7px rgb(0 0 0 / 10%);
-        padding: 0 5vw;
-      }
-      .logo {
-        width: 100px;
-      }
-      .logo img {
-        width: 100%;
-      }
-      nav ul {
-        display: flex;
-        list-style: none;
-      }
-      nav ul li {
-        margin: 0 1em;
-      }
-      nav ul li a {
-        text-decoration: none;
-        color: #000;
-        font-weight: bold;
-        letter-spacing: 1px;
-      }
-      .logout {
-        color: #d7bdca;
-      }
-
-      * {
-        box-sizing: border-box;
-        margin: 0;
-      }
-
-      body {
-        font-family: Arial, Helvetica, sans-serif;
-      }
-
-      .cards {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-        gap: 2rem;
-        margin: 4rem 5vw;
-        padding: 0;
-        list-style-type: none;
-      }
-
-      .card {
-        position: relative;
-        display: flex;
-        border-radius: 40px;
-        overflow: hidden;
-        box-shadow: 0px 3px 19px -7px rgb(0 0 0 / 10%);
-      }
-
-      .card-image {
-        width: 100%;
-      }
-
-      .card-overlay {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        border-radius: 40px;
-        background-color: #fff;
-        transform: translateY(100%);
-        transition: 0.2s ease-in-out;
-      }
-
-      .card:hover .card-overlay {
-        transform: translateY(0);
-      }
-
-      .card-header {
-        gap: 2em;
-        padding: 2em;
-        border-radius: 40px 0 0 0;
-        background-color: #fff;
-        transform: translateY(-100%);
-        transition: 0.2s ease-in-out;
-      }
-
-      .border {
-        width: 80px;
-        height: 80px;
-        position: absolute;
-        bottom: 100%;
-        right: 0;
-        z-index: 1;
-      }
-
-      .border path {
-        fill: #fff;
-        d: path("M 40 80 c 22 0 40 -22 40 -40 v 40 Z");
-      }
-
-      .card:hover .card-header {
-        transform: translateY(0);
-      }
-
-      .card-title {
-        font-size: 1em;
-        margin: 0 0 0.3em;
-        color: #6a515e;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-      }
-      .card-title i {
-        font-size: 1.3em;
-        cursor: pointer;
-        opacity: 0.6;
-        transition: 0.3s;
-      }
-      .card-title i:hover {
-        opacity: 1;
-      }
-
-      .price {
-        font-size: 0.8em;
-        color: #d7bdca;
-      }
-
-      .card-description {
-        padding: 0 2em 2em;
-        color: #d7bdca;
-        font-family: "MockFlowFont1";
-      }
-      footer {
-        background-color: #f8f8f9;
-        padding: 2em 5em;
-        color: #d7bdca;
-      }
-      footer .container .footer-header {
-        margin-bottom: 2em;
-        font-size: 1.4em;
-        color: #925373;
-        font-family: "Nunito", sans-serif;
-        font-weight: bold;
-      }
-      footer .container .categories {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        gap: 1em;
-        margin-bottom: 2em;
-      }
-      footer .container .categories .cat {
-        font-family: "MockFlowFont1";
-        font-size: 0.9em;
-      }
-    </style>
   </head>
   <body>
     <nav>
@@ -185,6 +23,7 @@
         <li><a href="cart.html">Cart</a></li>
         <li><a href="login.html" class="logout">Log out</a></li>
       </ul>
+      <i id="navBtn" class="fa fa-bars"></i>
     </nav>
     <ul class="cards">
       <li>
@@ -419,15 +258,6 @@
       </div>
     </footer>
 
-    <script>
-      let nav = document.querySelector("nav");
-      window.onscroll = function () {
-        if (window.pageYOffset > 200) {
-          nav.classList.add("scrolled");
-        } else {
-          nav.classList.remove("scrolled");
-        }
-      };
-    </script>
+    <script src="javascript/script.js"></script>
   </body>
 </html>
