wrapper problem fixed

--- a/index.html
+++ b/index.html
@@ -16,248 +16,249 @@
     <title>Menu</title>
   </head>
   <body>
-    <nav>
-      <div class="logo"><img src="images/good taste.png" alt="logo" /></div>
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="cart.html">Cart</a></li>
-        <li><a href="login.html" class="logout">Log out</a></li>
+    <div class="wrapper">
+      <nav>
+        <div class="logo"><img src="images/good taste.png" alt="logo" /></div>
+        <ul class="nav-links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="cart.html">Cart</a></li>
+          <li><a href="login.html" class="logout">Log out</a></li>
+        </ul>
+        <i id="navBtn" class="fa fa-bars"></i>
+      </nav>
+      <ul class="cards">
+        <li>
+          <a class="card">
+            <img src="images/food1.jpg" class="card-image" alt="" />
+            <div class="card-overlay">
+              <div class="card-header">
+                <svg class="border">
+                  <path />
+                </svg>
+
+                <div class="card-header-text">
+                  <h3 class="card-title">
+                    Toast with blueberry
+                    <i class="fa-solid fa-cart-plus"></i>
+                  </h3>
+                  <span class="price">35.00 EGP</span>
+                </div>
+              </div>
+              <p class="card-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Asperiores, blanditiis?
+              </p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a class="card">
+            <img src="images/food2.jpg" class="card-image" alt="" />
+            <div class="card-overlay">
+              <div class="card-header">
+                <svg class="border">
+                  <path />
+                </svg>
+
+                <div class="card-header-text">
+                  <h3 class="card-title">
+                    <div>Kebab <span style="opacity: 0.4">(1k)</span></div>
+                    <i class="fa-solid fa-cart-plus"></i>
+                  </h3>
+                  <span class="price">165 EGP</span>
+                </div>
+              </div>
+              <p class="card-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Asperiores, blanditiis?
+              </p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a class="card">
+            <img src="images/food3.jpg" class="card-image" alt="" />
+            <div class="card-overlay">
+              <div class="card-header">
+                <svg class="border">
+                  <path />
+                </svg>
+
+                <div class="card-header-text">
+                  <h3 class="card-title">
+                    Fruit salad with chicken panne
+                    <i class="fa-solid fa-cart-plus"></i>
+                  </h3>
+                  <span class="price">64.99 EGP</span>
+                </div>
+              </div>
+              <p class="card-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Asperiores, blanditiis?
+              </p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a class="card">
+            <img src="images/food4.jpg" class="card-image" alt="" />
+            <div class="card-overlay">
+              <div class="card-header">
+                <svg class="border">
+                  <path />
+                </svg>
+                <div class="card-header-text">
+                  <h3 class="card-title">
+                    Boiled egg sandwich
+                    <i class="fa-solid fa-cart-plus"></i>
+                  </h3>
+                  <span class="price">52.49 EGP</span>
+                </div>
+              </div>
+              <p class="card-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Asperiores, blanditiis?
+              </p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a class="card">
+            <img src="images/food6.jpg" class="card-image" alt="" />
+            <div class="card-overlay">
+              <div class="card-header">
+                <svg class="border">
+                  <path />
+                </svg>
+                <div class="card-header-text">
+                  <h3 class="card-title">
+                    Cheesy pizza
+                    <i class="fa-solid fa-cart-plus"></i>
+                  </h3>
+                  <span class="price">66.28 EGP</span>
+                </div>
+              </div>
+              <p class="card-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Asperiores, blanditiis?
+              </p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a class="card">
+            <img src="images/food7.jpg" class="card-image" alt="" />
+            <div class="card-overlay">
+              <div class="card-header">
+                <svg class="border">
+                  <path />
+                </svg>
+                <div class="card-header-text">
+                  <h3 class="card-title">
+                    Baked pancakes
+                    <i class="fa-solid fa-cart-plus"></i>
+                  </h3>
+                  <span class="price">43.98 EGP</span>
+                </div>
+              </div>
+              <p class="card-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Asperiores, blanditiis?
+              </p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a class="card">
+            <img src="images/food8.jpg" class="card-image" alt="" />
+            <div class="card-overlay">
+              <div class="card-header">
+                <svg class="border">
+                  <path />
+                </svg>
+                <div class="card-header-text">
+                  <h3 class="card-title">
+                    Onion salad
+                    <i class="fa-solid fa-cart-plus"></i>
+                  </h3>
+                  <span class="price">26.00 EGP</span>
+                </div>
+              </div>
+              <p class="card-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Asperiores, blanditiis?
+              </p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a class="card">
+            <img src="images/food9.jpg" class="card-image" alt="" />
+            <div class="card-overlay">
+              <div class="card-header">
+                <svg class="border">
+                  <path />
+                </svg>
+                <div class="card-header-text">
+                  <h3 class="card-title">
+                    Fried salmon
+                    <i class="fa-solid fa-cart-plus"></i>
+                  </h3>
+                  <span class="price">89.25 EGP</span>
+                </div>
+              </div>
+              <p class="card-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Asperiores, blanditiis?
+              </p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a class="card">
+            <img src="images/food10.jpg" class="card-image" alt="" />
+            <div class="card-overlay">
+              <div class="card-header">
+                <svg class="border">
+                  <path />
+                </svg>
+                <div class="card-header-text">
+                  <h3 class="card-title">
+                    Ice-cream with strawberry
+                    <i class="fa-solid fa-cart-plus"></i>
+                  </h3>
+                  <span class="price">15.50 EGP</span>
+                </div>
+              </div>
+              <p class="card-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Asperiores, blanditiis?
+              </p>
+            </div>
+          </a>
+        </li>
       </ul>
-      <i id="navBtn" class="fa fa-bars"></i>
-    </nav>
-    <ul class="cards">
-      <li>
-        <a class="card">
-          <img src="images/food1.jpg" class="card-image" alt="" />
-          <div class="card-overlay">
-            <div class="card-header">
-              <svg class="border">
-                <path />
-              </svg>
-
-              <div class="card-header-text">
-                <h3 class="card-title">
-                  Toast with blueberry
-                  <i class="fa-solid fa-cart-plus"></i>
-                </h3>
-                <span class="price">35.00 EGP</span>
-              </div>
-            </div>
-            <p class="card-description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Asperiores, blanditiis?
-            </p>
+      <footer>
+        <div class="container">
+          <div class="footer-header">Top Items</div>
+          <div class="categories">
+            <div class="cat">Lorem ipsum</div>
+            <div class="cat">dolor sit</div>
+            <div class="cat">amet</div>
+            <div class="cat">consectetur adipisicing</div>
+            <div class="cat">natus harum quae</div>
+            <div class="cat">suscipit reprehenderit</div>
+            <div class="cat">numquam magnam</div>
+            <div class="cat">Cranberry Cheesecake</div>
+            <div class="cat">fugit repellat</div>
+            <div class="cat">deleniti</div>
+            <div class="cat">voluptates laboriosam</div>
+            <div class="cat">tempora praesentium</div>
+            <div class="cat">deleniti! Provident</div>
           </div>
-        </a>
-      </li>
-      <li>
-        <a class="card">
-          <img src="images/food2.jpg" class="card-image" alt="" />
-          <div class="card-overlay">
-            <div class="card-header">
-              <svg class="border">
-                <path />
-              </svg>
-
-              <div class="card-header-text">
-                <h3 class="card-title">
-                  <div>Kebab <span style="opacity: 0.4">(1k)</span></div>
-                  <i class="fa-solid fa-cart-plus"></i>
-                </h3>
-                <span class="price">165 EGP</span>
-              </div>
-            </div>
-            <p class="card-description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Asperiores, blanditiis?
-            </p>
-          </div>
-        </a>
-      </li>
-      <li>
-        <a class="card">
-          <img src="images/food3.jpg" class="card-image" alt="" />
-          <div class="card-overlay">
-            <div class="card-header">
-              <svg class="border">
-                <path />
-              </svg>
-
-              <div class="card-header-text">
-                <h3 class="card-title">
-                  Fruit salad with chicken panne
-                  <i class="fa-solid fa-cart-plus"></i>
-                </h3>
-                <span class="price">64.99 EGP</span>
-              </div>
-            </div>
-            <p class="card-description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Asperiores, blanditiis?
-            </p>
-          </div>
-        </a>
-      </li>
-      <li>
-        <a class="card">
-          <img src="images/food4.jpg" class="card-image" alt="" />
-          <div class="card-overlay">
-            <div class="card-header">
-              <svg class="border">
-                <path />
-              </svg>
-              <div class="card-header-text">
-                <h3 class="card-title">
-                  Boiled egg sandwich
-                  <i class="fa-solid fa-cart-plus"></i>
-                </h3>
-                <span class="price">52.49 EGP</span>
-              </div>
-            </div>
-            <p class="card-description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Asperiores, blanditiis?
-            </p>
-          </div>
-        </a>
-      </li>
-      <li>
-        <a class="card">
-          <img src="images/food6.jpg" class="card-image" alt="" />
-          <div class="card-overlay">
-            <div class="card-header">
-              <svg class="border">
-                <path />
-              </svg>
-              <div class="card-header-text">
-                <h3 class="card-title">
-                  Cheesy pizza
-                  <i class="fa-solid fa-cart-plus"></i>
-                </h3>
-                <span class="price">66.28 EGP</span>
-              </div>
-            </div>
-            <p class="card-description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Asperiores, blanditiis?
-            </p>
-          </div>
-        </a>
-      </li>
-      <li>
-        <a class="card">
-          <img src="images/food7.jpg" class="card-image" alt="" />
-          <div class="card-overlay">
-            <div class="card-header">
-              <svg class="border">
-                <path />
-              </svg>
-              <div class="card-header-text">
-                <h3 class="card-title">
-                  Baked pancakes
-                  <i class="fa-solid fa-cart-plus"></i>
-                </h3>
-                <span class="price">43.98 EGP</span>
-              </div>
-            </div>
-            <p class="card-description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Asperiores, blanditiis?
-            </p>
-          </div>
-        </a>
-      </li>
-      <li>
-        <a class="card">
-          <img src="images/food8.jpg" class="card-image" alt="" />
-          <div class="card-overlay">
-            <div class="card-header">
-              <svg class="border">
-                <path />
-              </svg>
-              <div class="card-header-text">
-                <h3 class="card-title">
-                  Onion salad
-                  <i class="fa-solid fa-cart-plus"></i>
-                </h3>
-                <span class="price">26.00 EGP</span>
-              </div>
-            </div>
-            <p class="card-description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Asperiores, blanditiis?
-            </p>
-          </div>
-        </a>
-      </li>
-      <li>
-        <a class="card">
-          <img src="images/food9.jpg" class="card-image" alt="" />
-          <div class="card-overlay">
-            <div class="card-header">
-              <svg class="border">
-                <path />
-              </svg>
-              <div class="card-header-text">
-                <h3 class="card-title">
-                  Fried salmon
-                  <i class="fa-solid fa-cart-plus"></i>
-                </h3>
-                <span class="price">89.25 EGP</span>
-              </div>
-            </div>
-            <p class="card-description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Asperiores, blanditiis?
-            </p>
-          </div>
-        </a>
-      </li>
-      <li>
-        <a class="card">
-          <img src="images/food10.jpg" class="card-image" alt="" />
-          <div class="card-overlay">
-            <div class="card-header">
-              <svg class="border">
-                <path />
-              </svg>
-              <div class="card-header-text">
-                <h3 class="card-title">
-                  Ice-cream with strawberry
-                  <i class="fa-solid fa-cart-plus"></i>
-                </h3>
-                <span class="price">15.50 EGP</span>
-              </div>
-            </div>
-            <p class="card-description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Asperiores, blanditiis?
-            </p>
-          </div>
-        </a>
-      </li>
-    </ul>
-    <footer>
-      <div class="container">
-        <div class="footer-header">Top Items</div>
-        <div class="categories">
-          <div class="cat">Lorem ipsum</div>
-          <div class="cat">dolor sit</div>
-          <div class="cat">amet</div>
-          <div class="cat">consectetur adipisicing</div>
-          <div class="cat">natus harum quae</div>
-          <div class="cat">suscipit reprehenderit</div>
-          <div class="cat">numquam magnam</div>
-          <div class="cat">Cranberry Cheesecake</div>
-          <div class="cat">fugit repellat</div>
-          <div class="cat">deleniti</div>
-          <div class="cat">voluptates laboriosam</div>
-          <div class="cat">tempora praesentium</div>
-          <div class="cat">deleniti! Provident</div>
         </div>
-      </div>
-    </footer>
-
+      </footer>
+    </div>
     <script src="javascript/script.js"></script>
   </body>
 </html>
