--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <ul class="cards">
         <li>
           <a class="card">
-            <img src="images/food1.jpg" class="card-image" alt="" />
+            <img src="images/food1.webp" class="card-image" alt="" />
             <div class="card-overlay">
               <div class="card-header">
                 <svg class="border">
@@ -53,7 +53,7 @@
         </li>
         <li>
           <a class="card">
-            <img src="images/food2.jpg" class="card-image" alt="" />
+            <img src="images/food2.webp" class="card-image" alt="" />
             <div class="card-overlay">
               <div class="card-header">
                 <svg class="border">
@@ -77,7 +77,7 @@
         </li>
         <li>
           <a class="card">
-            <img src="images/food3.jpg" class="card-image" alt="" />
+            <img src="images/food3.webp" class="card-image" alt="" />
             <div class="card-overlay">
               <div class="card-header">
                 <svg class="border">
@@ -101,7 +101,7 @@
         </li>
         <li>
           <a class="card">
-            <img src="images/food4.jpg" class="card-image" alt="" />
+            <img src="images/food4.webp" class="card-image" alt="" />
             <div class="card-overlay">
               <div class="card-header">
                 <svg class="border">
@@ -124,7 +124,7 @@
         </li>
         <li>
           <a class="card">
-            <img src="images/food6.jpg" class="card-image" alt="" />
+            <img src="images/food6.webp" class="card-image" alt="" />
             <div class="card-overlay">
               <div class="card-header">
                 <svg class="border">
@@ -147,7 +147,7 @@
         </li>
         <li>
           <a class="card">
-            <img src="images/food7.jpg" class="card-image" alt="" />
+            <img src="images/food7.webp" class="card-image" alt="" />
             <div class="card-overlay">
               <div class="card-header">
                 <svg class="border">
@@ -170,7 +170,7 @@
         </li>
         <li>
           <a class="card">
-            <img src="images/food8.jpg" class="card-image" alt="" />
+            <img src="images/food8.webp" class="card-image" alt="" />
             <div class="card-overlay">
               <div class="card-header">
                 <svg class="border">
@@ -193,7 +193,7 @@
         </li>
         <li>
           <a class="card">
-            <img src="images/food9.jpg" class="card-image" alt="" />
+            <img src="images/food9.webp" class="card-image" alt="" />
             <div class="card-overlay">
               <div class="card-header">
                 <svg class="border">
@@ -216,7 +216,7 @@
         </li>
         <li>
           <a class="card">
-            <img src="images/food10.jpg" class="card-image" alt="" />
+            <img src="images/food10.webp" class="card-image" alt="" />
             <div class="card-overlay">
               <div class="card-header">
                 <svg class="border">
