--- a/admin-menu.html
+++ b/admin-menu.html
@@ -12,13 +12,13 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="Fonts/styles.css" />
+    <link rel="stylesheet" href="css/admin-menu.css" />
     <link rel="stylesheet" href="css/menu.css" />
-    <title>Menu</title>
+    <title>Admin Menu</title>
   </head>
   <body>
     <div class="wrapper">
       <!-- Navigation -->
-      
       <nav>
         <div class="logo"><img src="images/good taste.png" alt="logo" /></div>
         <ul class="nav-links">
@@ -34,9 +34,13 @@
       <!-- Category 1 -->
 
       <div class="food-category">
-        <div class="category-title">Meat</div>
+        <div class="category-title">
+          Meat
+          <div class="delete-category-btn">Delete category</div>
+        </div>
         <ul class="cards">
           <li>
+            <i class="fa-solid fa-xmark x-mark"></i>
             <a class="card">
               <img
                 src="images/Categories/meat/meat-1.webp"
@@ -52,7 +56,7 @@
                   <div class="card-header-text">
                     <h3 class="card-title">
                       <div>Kebab <span style="opacity: 0.4">(1k)</span></div>
-                      <i class="fa-solid fa-cart-plus"></i>
+                      <i class="fa-regular fa-pen-to-square"></i>
                     </h3>
                     <span class="price">35.00 EGP</span>
                   </div>
@@ -65,6 +69,7 @@
             </a>
           </li>
           <li>
+            <i class="fa-solid fa-xmark x-mark"></i>
             <a class="card">
               <img
                 src="images/Categories/meat/meat-2.webp"
@@ -80,7 +85,7 @@
                   <div class="card-header-text">
                     <h3 class="card-title">
                       Toast with blueberry
-                      <i class="fa-solid fa-cart-plus"></i>
+                      <i class="fa-regular fa-pen-to-square"></i>
                     </h3>
                     <span class="price">165 EGP</span>
                   </div>
@@ -93,6 +98,7 @@
             </a>
           </li>
           <li>
+            <i class="fa-solid fa-xmark x-mark"></i>
             <a class="card">
               <img
                 src="images/Categories/meat/meat-3.webp"
@@ -108,7 +114,7 @@
                   <div class="card-header-text">
                     <h3 class="card-title">
                       Fruit salad with chicken panne
-                      <i class="fa-solid fa-cart-plus"></i>
+                      <i class="fa-regular fa-pen-to-square"></i>
                     </h3>
                     <span class="price">64.99 EGP</span>
                   </div>
@@ -121,6 +127,7 @@
             </a>
           </li>
           <li>
+            <i class="fa-solid fa-xmark x-mark"></i>
             <a class="card">
               <img
                 src="images/Categories/meat/meat-4.webp"
@@ -135,7 +142,7 @@
                   <div class="card-header-text">
                     <h3 class="card-title">
                       Boiled egg sandwich
-                      <i class="fa-solid fa-cart-plus"></i>
+                      <i class="fa-regular fa-pen-to-square"></i>
                     </h3>
                     <span class="price">52.49 EGP</span>
                   </div>
@@ -148,6 +155,7 @@
             </a>
           </li>
           <li>
+            <i class="fa-solid fa-xmark x-mark"></i>
             <a class="card">
               <img
                 src="images/Categories/meat/meat-5.webp"
@@ -162,7 +170,7 @@
                   <div class="card-header-text">
                     <h3 class="card-title">
                       Boiled egg sandwich
-                      <i class="fa-solid fa-cart-plus"></i>
+                      <i class="fa-regular fa-pen-to-square"></i>
                     </h3>
                     <span class="price">52.49 EGP</span>
                   </div>
@@ -175,6 +183,7 @@
             </a>
           </li>
           <li>
+            <i class="fa-solid fa-xmark x-mark"></i>
             <a class="card">
               <img
                 src="images/Categories/meat/meat-6.webp"
@@ -189,7 +198,7 @@
                   <div class="card-header-text">
                     <h3 class="card-title">
                       Boiled egg sandwich
-                      <i class="fa-solid fa-cart-plus"></i>
+                      <i class="fa-regular fa-pen-to-square"></i>
                     </h3>
                     <span class="price">52.49 EGP</span>
                   </div>
@@ -201,6 +210,15 @@
               </div>
             </a>
           </li>
+          <li>
+            <a href="add-product.html" class="card add-cart">
+              <img
+                src="images/Categories/add-item.png"
+                class="card-image"
+                alt="add item"
+              />
+            </a>
+          </li>
         </ul>
       </div>
 
@@ -209,9 +227,13 @@
       <!-- Category 2 -->
 
       <div class="food-category">
-        <div class="category-title">Fish</div>
+        <div class="category-title">
+          Fish
+          <div class="delete-category-btn">Delete category</div>
+        </div>
         <ul class="cards">
           <li>
+            <i class="fa-solid fa-xmark x-mark"></i>
             <a class="card">
               <img
                 src="images/Categories/fish/fish-1.webp"
@@ -226,7 +248,7 @@
                   <div class="card-header-text">
                     <h3 class="card-title">
                       Baked pancakes
-                      <i class="fa-solid fa-cart-plus"></i>
+                      <i class="fa-regular fa-pen-to-square"></i>
                     </h3>
                     <span class="price">43.98 EGP</span>
                   </div>
@@ -239,6 +261,7 @@
             </a>
           </li>
           <li>
+            <i class="fa-solid fa-xmark x-mark"></i>
             <a class="card">
               <img
                 src="images/Categories/fish/fish-2.webp"
@@ -253,7 +276,7 @@
                   <div class="card-header-text">
                     <h3 class="card-title">
                       Onion salad
-                      <i class="fa-solid fa-cart-plus"></i>
+                      <i class="fa-regular fa-pen-to-square"></i>
                     </h3>
                     <span class="price">26.00 EGP</span>
                   </div>
@@ -266,6 +289,7 @@
             </a>
           </li>
           <li>
+            <i class="fa-solid fa-xmark x-mark"></i>
             <a class="card">
               <img
                 src="images/Categories/fish/fish-3.webp"
@@ -280,7 +304,7 @@
                   <div class="card-header-text">
                     <h3 class="card-title">
                       Fried salmon
-                      <i class="fa-solid fa-cart-plus"></i>
+                      <i class="fa-regular fa-pen-to-square"></i>
                     </h3>
                     <span class="price">89.25 EGP</span>
                   </div>
@@ -293,6 +317,7 @@
             </a>
           </li>
           <li>
+            <i class="fa-solid fa-xmark x-mark"></i>
             <a class="card">
               <img
                 src="images/Categories/fish/fish-5.webp"
@@ -307,7 +332,7 @@
                   <div class="card-header-text">
                     <h3 class="card-title">
                       Ice-cream with strawberry
-                      <i class="fa-solid fa-cart-plus"></i>
+                      <i class="fa-regular fa-pen-to-square"></i>
                     </h3>
                     <span class="price">15.50 EGP</span>
                   </div>
@@ -320,6 +345,7 @@
             </a>
           </li>
           <li>
+            <i class="fa-solid fa-xmark x-mark"></i>
             <a class="card">
               <img
                 src="images/Categories/fish/fish-4.webp"
@@ -334,7 +360,7 @@
                   <div class="card-header-text">
                     <h3 class="card-title">
                       Ice-cream with strawberry
-                      <i class="fa-solid fa-cart-plus"></i>
+                      <i class="fa-regular fa-pen-to-square"></i>
                     </h3>
                     <span class="price">15.50 EGP</span>
                   </div>
@@ -346,6 +372,15 @@
               </div>
             </a>
           </li>
+          <li>
+            <a href="add-product.html" class="card add-cart">
+              <img
+                src="images/Categories/add-item.png"
+                class="card-image"
+                alt="add item"
+              />
+            </a>
+          </li>
         </ul>
       </div>
 
@@ -354,9 +389,13 @@
       <!-- Category 3 -->
 
       <div class="food-category">
-        <div class="category-title">Pizza</div>
+        <div class="category-title">
+          Pizza
+          <div class="delete-category-btn">Delete category</div>
+        </div>
         <ul class="cards">
           <li>
+            <i class="fa-solid fa-xmark x-mark"></i>
             <a class="card">
               <img
                 src="images/Categories/pizza/pizza-1.webp"
@@ -371,7 +410,7 @@
                   <div class="card-header-text">
                     <h3 class="card-title">
                       Baked pancakes
-                      <i class="fa-solid fa-cart-plus"></i>
+                      <i class="fa-regular fa-pen-to-square"></i>
                     </h3>
                     <span class="price">43.98 EGP</span>
                   </div>
@@ -384,6 +423,7 @@
             </a>
           </li>
           <li>
+            <i class="fa-solid fa-xmark x-mark"></i>
             <a class="card">
               <img
                 src="images/Categories/pizza/pizza-2.webp"
@@ -398,7 +438,7 @@
                   <div class="card-header-text">
                     <h3 class="card-title">
                       Onion salad
-                      <i class="fa-solid fa-cart-plus"></i>
+                      <i class="fa-regular fa-pen-to-square"></i>
                     </h3>
                     <span class="price">26.00 EGP</span>
                   </div>
@@ -411,30 +451,12 @@
             </a>
           </li>
           <li>
-            <a class="card">
+            <a href="add-product.html" class="card add-cart">
               <img
-                src="images/Categories/pizza/pizza-3.webp"
+                src="images/Categories/add-item.png"
                 class="card-image"
-                alt="pizza"
+                alt="add item"
               />
-              <div class="card-overlay">
-                <div class="card-header">
-                  <svg class="border">
-                    <path />
-                  </svg>
-                  <div class="card-header-text">
-                    <h3 class="card-title">
-                      Fried salmon
-                      <i class="fa-solid fa-cart-plus"></i>
-                    </h3>
-                    <span class="price">89.25 EGP</span>
-                  </div>
-                </div>
-                <p class="card-description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Asperiores, blanditiis?
-                </p>
-              </div>
             </a>
           </li>
         </ul>
@@ -444,9 +466,13 @@
 
       <!-- Category 4 -->
       <div class="food-category">
-        <div class="category-title">Miscellaneous</div>
+        <div class="category-title">
+          Miscellaneous
+          <div class="delete-category-btn">Delete category</div>
+        </div>
         <ul class="cards">
           <li>
+            <i class="fa-solid fa-xmark x-mark"></i>
             <a class="card">
               <img
                 src="images/Categories/misc/misc-1.webp"
@@ -461,7 +487,7 @@
                   <div class="card-header-text">
                     <h3 class="card-title">
                       Baked pancakes
-                      <i class="fa-solid fa-cart-plus"></i>
+                      <i class="fa-regular fa-pen-to-square"></i>
                     </h3>
                     <span class="price">43.98 EGP</span>
                   </div>
@@ -474,6 +500,7 @@
             </a>
           </li>
           <li>
+            <i class="fa-solid fa-xmark x-mark"></i>
             <a class="card">
               <img
                 src="images/Categories/misc/misc-2.webp"
@@ -488,7 +515,7 @@
                   <div class="card-header-text">
                     <h3 class="card-title">
                       Onion salad
-                      <i class="fa-solid fa-cart-plus"></i>
+                      <i class="fa-regular fa-pen-to-square"></i>
                     </h3>
                     <span class="price">26.00 EGP</span>
                   </div>
@@ -501,6 +528,7 @@
             </a>
           </li>
           <li>
+            <i class="fa-solid fa-xmark x-mark"></i>
             <a class="card">
               <img
                 src="images/Categories/misc/misc-3.webp"
@@ -515,7 +543,7 @@
                   <div class="card-header-text">
                     <h3 class="card-title">
                       Fried salmon
-                      <i class="fa-solid fa-cart-plus"></i>
+                      <i class="fa-regular fa-pen-to-square"></i>
                     </h3>
                     <span class="price">89.25 EGP</span>
                   </div>
@@ -528,6 +556,7 @@
             </a>
           </li>
           <li>
+            <i class="fa-solid fa-xmark x-mark"></i>
             <a class="card">
               <img
                 src="images/Categories/misc/misc-4.webp"
@@ -542,7 +571,7 @@
                   <div class="card-header-text">
                     <h3 class="card-title">
                       Ice-cream with strawberry
-                      <i class="fa-solid fa-cart-plus"></i>
+                      <i class="fa-regular fa-pen-to-square"></i>
                     </h3>
                     <span class="price">15.50 EGP</span>
                   </div>
@@ -555,6 +584,7 @@
             </a>
           </li>
           <li>
+            <i class="fa-solid fa-xmark x-mark"></i>
             <a class="card">
               <img
                 src="images/Categories/misc/misc-5.webp"
@@ -569,7 +599,7 @@
                   <div class="card-header-text">
                     <h3 class="card-title">
                       Ice-cream with strawberry
-                      <i class="fa-solid fa-cart-plus"></i>
+                      <i class="fa-regular fa-pen-to-square"></i>
                     </h3>
                     <span class="price">15.50 EGP</span>
                   </div>
@@ -582,6 +612,7 @@
             </a>
           </li>
           <li>
+            <i class="fa-solid fa-xmark x-mark"></i>
             <a class="card">
               <img
                 src="images/Categories/misc/misc-6.webp"
@@ -596,7 +627,7 @@
                   <div class="card-header-text">
                     <h3 class="card-title">
                       Ice-cream with strawberry
-                      <i class="fa-solid fa-cart-plus"></i>
+                      <i class="fa-regular fa-pen-to-square"></i>
                     </h3>
                     <span class="price">15.50 EGP</span>
                   </div>
@@ -609,6 +640,7 @@
             </a>
           </li>
           <li>
+            <i class="fa-solid fa-xmark x-mark"></i>
             <a class="card">
               <img
                 src="images/Categories/misc/misc-7.webp"
@@ -623,7 +655,7 @@
                   <div class="card-header-text">
                     <h3 class="card-title">
                       Ice-cream with strawberry
-                      <i class="fa-solid fa-cart-plus"></i>
+                      <i class="fa-regular fa-pen-to-square"></i>
                     </h3>
                     <span class="price">15.50 EGP</span>
                   </div>
@@ -633,6 +665,16 @@
                   Asperiores, blanditiis?
                 </p>
               </div>
+            </a>
+          </li>
+
+          <li>
+            <a href="add-product.html" class="card add-cart">
+              <img
+                src="images/Categories/add-item.png"
+                class="card-image"
+                alt="add item"
+              />
             </a>
           </li>
         </ul>
