--- a/admin-menu.html
+++ b/admin-menu.html
@@ -22,6 +22,7 @@
       <nav>
         <div class="logo"><img src="images/good taste.png" alt="logo" /></div>
         <ul class="nav-links">
+          <li><a href="index.html"> Switch to user</a></li>
           <li><a href="index.html">Home</a></li>
           <li><a href="cart.html">Cart</a></li>
           <li><a href="login.html" class="logout">Log out</a></li>
