--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
   <body>
     <div class="wrapper">
       <!-- Navigation -->
-      
+
       <nav>
         <div class="logo"><img src="images/good taste.png" alt="logo" /></div>
         <ul class="nav-links">
+          <li><a href="admin-menu.html"> Switch to admin</a></li>
           <li><a href="index.html">Home</a></li>
           <li><a href="cart.html">Cart</a></li>
           <li><a href="login.html" class="logout">Log out</a></li>
