--- a/add-product.html
+++ b/add-product.html
@@ -36,7 +36,11 @@
           </div>
           <div class="input">
             <div class="input-heading">Category</div>
-            <input placeholder="eg. meat, pizza, etc" type="text" />
+            <select>
+              <option value="meat">Meat</option>
+              <option value="meat">Meat</option>
+              <option value="meat">Meat</option>
+            </select>
           </div>
           <div class="input">
             <div class="input-heading">Price</div>
